--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "webpack-dev-server --config ./webpack.config.js --mode development --open --hot",
+    "dev": "webpack-dev-server --config ./webpack.config.js --mode development --open --hot",
     "build": "webpack --mode production"
   },
   "repository": {
@@ -29,10 +29,10 @@
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
     "mini-css-extract-plugin": "^0.5.0",
-    "react-hot-loader": "^4.8.0",
+    "react-hot-loader": "^4.8.4",
     "style-loader": "^0.23.1",
     "webpack": "^4.29.6",
-    "webpack-cli": "^3.3.0",
+    "webpack-cli": "^3.3.1",
     "webpack-dev-server": "^3.2.1"
   },
   "dependencies": {
